# scrapy-grpc

./: README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
scrapy_grpc/: webservice.py
