[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapy-grpc"
version = "1.0.0"
description = "Scrapy extension to control spiders using gRPC"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "rangertaha" }]
keywords = ["scrapy", "grpc", "crawler", "spider"]
classifiers = [
    "Framework :: Scrapy",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "Scrapy>=2.16",
    "grpcio>=1.81",
]

[project.urls]
Homepage = "https://github.com/rangertaha/scrapy-grpc"
Repository = "https://github.com/rangertaha/scrapy-grpc"
Issues = "https://github.com/rangertaha/scrapy-grpc/issues"

[tool.hatch.build.targets.wheel]
packages = ["scrapy_grpc"]
